--- a/style.css
+++ b/style.css
@@ -1,105 +1,105 @@
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Rubik', sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: 'Rubik', sans-serif;
 }
 
 * {
-  box-sizing: border-box;
-  transition: all 0.32s ease;
+	box-sizing: border-box;
+	transition: all 0.32s ease;
 }
 
 main {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  background: black;
-  color: white;
+	width: 100vw;
+	height: 100vh;
+	display: flex;
+	background: blue;
+	color: white;
 }
 
 section {
-  padding: 16px;
+	padding: 16px;
 }
 
 .Left {
-  width: 33%;
-  height: 100%;
-  min-width: 300px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	width: 33%;
+	height: 100%;
+	min-width: 300px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .Right {
-  width: 66%;
-  height: 100%;
-  min-width: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: left;
+	width: 66%;
+	height: 100%;
+	min-width: 300px;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: left;
 }
 
 .Left > img {
-  width: 100%;
-  margin: auto;
+	width: 100%;
+	margin: auto;
 }
 
 h1 {
-  font-size: 48px;
-  font-weight: 900;
-  margin: 0;
+	font-size: 48px;
+	font-weight: 900;
+	margin: 0;
 }
 
 h3 {
-  font-size: 24px;
-  font-weight: 100;
-  margin: 0;
-  margin-bottom: 16px;
+	font-size: 24px;
+	font-weight: 100;
+	margin: 0;
+	margin-bottom: 16px;
 }
 
 p {
-  margin: 0;
-  margin-top: 16px;
+	margin: 0;
+	margin-top: 16px;
 }
 
 button {
-  width: 160px;
-  font-size: 16px;
-  padding: 12px 24px;
-  border-radius: 8px;
-  border: 0;
-  margin-top: 32px;
-  background: white;
-  color: black;
-  font-weight: 900;
+	width: 160px;
+	font-size: 16px;
+	padding: 12px 24px;
+	border-radius: 8px;
+	border: 0;
+	margin-top: 32px;
+	background: white;
+	color: black;
+	font-weight: 900;
 }
 
 button:hover {
-  transform: translate(-2px, -2px);
-  cursor: pointer;
+	transform: translate(-2px, -2px);
+	cursor: pointer;
 }
 
 a {
-  text-decoration: none;
-  color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
 @media (max-width: 600px) {
-  main {
-    flex-direction: column;
-  }
-  .Left {
-    width: 100%;
-  }
-  .Right {
-    width: 100%;
-    align-content: center;
-    text-align: center;
-  }
-  button {
-    margin: 32px auto;
-  }
+	main {
+		flex-direction: column;
+	}
+	.Left {
+		width: 100%;
+	}
+	.Right {
+		width: 100%;
+		align-content: center;
+		text-align: center;
+	}
+	button {
+		margin: 32px auto;
+	}
 }
